Big O and Linked Lists

--- a/Arrays and Strings/Arrays and Strings.ipynb
+++ b/Arrays and Strings/Arrays and Strings.ipynb
@@ -590,6 +590,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.9 Assume you have a method isSubstring which checks if one word is a substring of another. Given two strings, s1 and s2, write code to check if s2 is a rotation of s1 using only one call to isSubstring (e.g., \"waterbottle\" is a rotation of \"erbottlewat\").\n",
+    "\n",
+    "I'm going to assume that I HAVE to use one call to isSubstring, or in this case, the in keyword. Also, this seems to be hinting that this can be solved in O(1).\n",
+    "Note: if s1 is a rotation of s2, then s2 is a rotation of s1.\n",
+    "\n",
+    "If I can select a portion of s1 where I know the 'break' in the rotation isn't, then I can get the new index of the substring, and determine how many places were rotated through. I could then do that many rotations and check for equality.\n",
+    "If I had TWO calls to isSubstring, I could test both halves of the first string in the other.\n",
+    "OR I could sort and test for equality, then check if the first half is a substring. If it is, then check for the index of the first half substring, if it's not then the index of the second half substring."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_rotation(s1, s2):\n",
+    "    if s1 == s2:\n",
+    "        return True\n",
+    "    if ''.join(sorted(s1)) == ''.join(sorted(s2)):\n",
+    "        middle = len(s1)//2\n",
+    "        if s1[:middle] in s2:\n",
+    "            rotation = s2.find(s1[:middle])\n",
+    "            if s1 == ''.join(s2[rotation:] + s2[:rotation]):\n",
+    "                return True\n",
+    "        else:\n",
+    "            rotation = middle - s2.find(s1[middle:])\n",
+    "            if s1 == ''.join(s2[-rotation:] + s2[:-rotation]):\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "print(is_rotation('butt', 'tbut'))\n",
+    "print(is_rotation('waterbottle', 'erbottlewat'))\n",
+    "print(is_rotation('waterbottle', 'lewaterbott'))\n",
+    "print(is_rotation('watrboettle', 'lewaterbott'))\n",
+    "print(is_rotation('waterbottle', 'aterbottlew'))\n",
+    "\n",
+    "# the books solution\n",
+    "# if s2 is a rotation of s1, then it is a substring of s1+s1\n",
+    "def is_rotation_(s1, s2):\n",
+    "    if (len(s1) == len(s2)) and s1 != '':\n",
+    "        if s2 in s1 + s1:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "print(is_rotation_('butt', 'tbut'))\n",
+    "print(is_rotation_('waterbottle', 'erbottlewat'))\n",
+    "print(is_rotation_('waterbottle', 'lewaterbott'))\n",
+    "print(is_rotation_('watrboettle', 'lewaterbott'))\n",
+    "print(is_rotation_('waterbottle', 'aterbottlew'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
